# valuationFramework

./: .gitignore  PROGRESS.md  README.md  claude.md  pyproject.toml  setup  vf
docs/: ARCHITECTURE.md  portfolio.md
src/valuation/: CLAUDE.md  __init__.py  cli.py  config.py  notation.py  watchlist.py
src/valuation/brk/: CLAUDE.md  __init__.py  cli.py  holdings.py  reference.py  segments.py  service.py  statements.py  tables.py
src/valuation/company/: CLAUDE.md  __init__.py  comps.py  ratios.py  service.py  statements.py  tables.py  yahoo_statements.py
src/valuation/data/: CLAUDE.md
src/valuation/data/normalize/: CLAUDE.md  tables.py
src/valuation/data/providers/: CLAUDE.md  sec.py  yahoo.py
src/valuation/portfolio/: CLAUDE.md  __init__.py  cli.py  furs_xml.py  fx.py  ibkr.py  ibkr_flex.py  lots.py  tax_si.py
src/valuation/reports/: CLAUDE.md  tables.py
src/valuation/securities/: CLAUDE.md  __init__.py  identifiers.py  pricing.py
src/valuation/utils/: formatting.py  scale.py
tests/: CLAUDE.md  test_brk_holdings.py  test_brk_segments.py  test_brk_service.py  test_brk_statement_fallback.py  test_brk_tables.py  test_cli.py  test_company_service.py  test_company_tables.py  test_comps.py  test_config.py  test_normalize_tables.py  test_notation.py  test_portfolio.py  test_ratios.py  test_reports_display.py  test_reports_tables.py  test_sec_provider.py  test_security_identifiers.py  test_security_pricing.py  test_statement_matrix.py  test_utils_formatting.py  test_watchlist.py  test_yahoo_provider.py  test_yahoo_statement_tables.py
(+2 files in other folders)
