[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valuation-framework"
version = "0.1.0"
description = "Backend-first stock valuation tooling with table-oriented outputs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas>=1.5,<3",
  "requests>=2.31,<3",
  "tabulate>=0.9,<1",
  "yfinance>=0.2.54,<1",
]

[project.scripts]
valuation = "valuation.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
